fix(timeline): aligning symbols to tr

--- a/frontend/assets/css/timeline.scss
+++ b/frontend/assets/css/timeline.scss
@@ -262,6 +262,7 @@ html {
         margin: 0 0 0;
         border-bottom: 0.4vw solid $taupe;
         align-self: flex-end;
+        /*background:red;*/
         &:hover {
           border-bottom: 0.4vw solid darken($taupe, 20%);
           cursor: pointer;
@@ -380,6 +381,7 @@ html {
           border: 0;
           height: auto;
           z-index: 1;
+          /*background:blue;*/
           &:after {
             opacity: 0.6;
           }
@@ -395,7 +397,6 @@ html {
             width: calc(var(--event-value) / 1);
             padding-bottom: calc(var(--event-value) / 1);
             margin-bottom: 0;
-            border-radius: 50%;
             opacity: 1;
             aspect-ratio: 1/4;
             &:after {
@@ -409,8 +410,7 @@ html {
               vertical-align: bottom;
               position: absolute;
               content: "";
-              left: 50%;
-              transform: translate(-50%, 0);
+              left:-1vw;
               clip-path: polygon(50% 0, 100% 100%, 0 100%);
               width: 7.5vw;
             }
@@ -432,15 +432,16 @@ html {
             }
           } //.year
           &.historicalEventCount {
-            width: 0.1vw;
+            width: 3vw;
             height: 6vw;
-            display: inline-block;
             margin-bottom: 0;
             vertical-align: bottom;
             position: absolute;
             bottom: -3vw;
+            transform: translateX(90%);
             &.present {
-              background: $primary-dark;
+              /*background: $primary-dark;*/
+              background-image: linear-gradient(90deg, transparent 1%, black 4%, transparent 3%);
             } //&.present
             & span {
               
@@ -449,15 +450,11 @@ html {
           &.birthEventCount {
             width: 3vw;
             height: 3vw;
-            display: inline-block;
             margin-bottom: 0;
             vertical-align: bottom;
             position: absolute;
             bottom: -2vw;
-            /* Calculates 50% of the element's width, and moves it by that */
-            transform: translateX(
-              -50%
-            ); /* amount across the X-axis to the left */
+            transform: translateX(90%);
             &.present {
               background: transparent;
               z-index: 1;
@@ -491,15 +488,11 @@ html {
           &.deathEventCount {
             width: 2vw;
             height: 1.2vw;
-            display: inline-block;
             margin-bottom: 0;
             vertical-align: bottom;
             position: absolute;
             bottom: -2.3vw;
-            /* Calculates 50% of the element's width, and moves it by that */
-            transform: translateX(
-              -50%
-            ); /* amount across the X-axis to the left */
+            transform: translateX(90%);
             &.present {
               z-index: 1;
               /*background:black;*/
@@ -527,15 +520,13 @@ html {
           &.marriageEventCount {
             width: 1vw;
             height: 1vw;
-            display: inline-block;
             margin-bottom: 0;
             vertical-align: bottom;
             position: absolute;
             bottom: -1.7vw;
-            /* Calculates 50% of the element's width, and moves it by that */
             transform: translateX(
-              -50%
-            ); /* amount across the X-axis to the left */
+              90%
+            ); 
             &.present {
               background: transparent;
               z-index: 1;
@@ -627,7 +618,6 @@ html {
     justify-content: center;
     vertical-align: bottom;
     margin: 2vw 0 4vw 0;
-    background: red;
     border-collapse: collapse;
 
     &:after {
@@ -723,8 +713,7 @@ html {
             border-radius: 50%;
             position: absolute;
             content: "";
-            left: 50%;
-            transform: translate(-50%, 0);
+            transform: translate(-10%, 0);
           }
           &:hover {
             opacity: 1;
@@ -757,14 +746,11 @@ html {
         &.historicalEventCount {
           width: 1vw;
           height: 1vw;
-          display: inline-block;
           margin-bottom: 0;
           vertical-align: bottom;
           position: absolute;
           bottom: -1.9vw;
-          left: 50%;
-          /* Calculates 50% of the element's width, and moves it by that */
-          transform: translateX(-50%) rotate(45deg); /* amount across the X-axis to the left */
+          margin-left: 2.75vw;
           &.present {
             background: black;
             opacity: 0.6;
